# SoulEngine

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  ENGINE_ARCHITECTURE.md  READEME.md  README.md  build_run.bat  build_run.sh  clean_dx_shader_cache.bat  configure.bat  configure.sh  imgui.ini
Doc/: PROJECT_STRUCTURE.md  Renderer_Design.md  Renderer_Design_CN.md
Doc/KCP_Implementation/: Kcp.cs  KcpClient.cs  KcpClientDemo.cs  KcpSegment.cs  KcpServer.cs  README.md
Doc/Renderer/: Gfx.h  README.md
Doc/Renderer/Examples/: README.md  Triangle_GL_Example.cpp
Doc/Renderer/OpenGL/: GLBackendSkeleton.cpp
Doc/ResourceSystem/: ResourceSystemDesign.md
Editor/: CMakeLists.txt  ContentBrowser.cpp  EditorMain.cpp  EditorMainNew.cpp  EditorPrefs.cpp  EditorPrefs.h  GuiManager.cpp  GuiManager.h  GuiWindow.cpp  GuiWindow.h  ImGuiManager.cpp  ImGuiManager.h  MainEditorUI.cpp  MainEditorUI.h  ProjectManager.cpp  ProjectManager.h  StartupWindow.cpp  StartupWindow.h  WelcomeUI.cpp  WelcomeUI.h  WindowFactory.cpp  WindowFactory.h  WindowRegister.h
Editor/GUI/: ContentBrowser.cpp  ContentBrowser.h  GuiWindow.h  StartupWindow.cpp
Editor/Project/: Project.cpp  Project.h  ProjectManager.cpp  ProjectManager.h
Engine/: CMakeLists.txt  Define.h  SoulEngine.h
Engine/Component/: Component.cpp  Component.h
Engine/Core/: Application.cpp  Application.h  ApplicationHelper.h  Engine.cpp  Engine.h  Engine.inl  EngineFileIO.cpp  EngineFileIO.h  EngineSystem.h  GameObject.cpp  GameObject.h  Input.h  KeyCode.h  RendererSystem.h  Serializable.h  ServiceRegistry.h  SystemInterface.h  Timer.h
Engine/Log/: Logger.cpp  Logger.h
Engine/Project/: Project.cpp  Project.h
Engine/Renderer/: Buffer.cpp  Buffer.h  Gfx.h  RenderSystem.cpp  RenderSystem.h  Renderer.cpp  Renderer.h  RendererFactory.cpp  RendererFactory.h
Engine/Renderer/OpenGL/: GLBackendSkeleton.cpp  GfxGLBuffer.cpp  GfxGLBuffer.h  GfxGLCommon.h  GfxGLContext.cpp  GfxGLContext.h  GfxGLDevice.cpp  GfxGLDevice.h  GfxGLProgram.cpp  GfxGLProgram.h  GfxGLShader.cpp  GfxGLShader.h  GfxGLVertexInputLayout.h  OpenGLBuffer.h  OpenGLRenderer.cpp  OpenGLRenderer.h  OpenGlBuffer.cpp
Engine/Util/: FileUtil.hpp
Engine/Window/: IWindow.h  WindowSystem.cpp  WindowSystem.h
Engine/Window/Platform/: GLFWInput.cpp  GLFWWindow.cpp  GLFWWindow.h
Launcher/: CMakeLists.txt  README.md
Launcher/DX11Blending/: CMakeLists.txt  imgui.ini  main.cpp
Launcher/DX11Blending/Shaders/: Basic_2D_PS.cso  Basic_2D_VS.cso  Basic_3D_PS.cso  Basic_3D_VS.cso
Launcher/DX11Camera/: CMakeLists.txt  imgui.ini  main.cpp
Launcher/DX11Camera/Shaders/: Basic.hlsli  Basic_2D_PS.cso  Basic_2D_VS.cso  Basic_3D_PS.cso  Basic_3D_VS.cso
Launcher/DX11Demo/: CMakeLists.txt  d3dApp.cpp  d3dApp.h  d3dUtil.h  main.cpp
Launcher/DX11Demo/Shaders/: Triangle.cso  Triangle.hlsl  Triangle_PS.cso  Triangle_VS.cso
Launcher/DX11FXLikeDemo/: BasicEffect.cpp  CMakeLists.txt  imgui.ini  main.cpp
Launcher/DX11Font/: CMakeLists.txt  d3dApp.h  imgui.ini
Launcher/DX11Imgui/: CMakeLists.txt  d3dApp.cpp  d3dApp.h  imgui.ini  main.cpp
Launcher/DX11Imgui/Shaders/: Triangle.hlsl  Triangle_PS.cso  Triangle_VS.cso
Launcher/DX11Light/: main.cpp
Launcher/DX11Light/Shaders/: Light_VS.cso
Launcher/DX11Reflection/: CMakeLists.txt  RenderStates.cpp  imgui.ini  main.cpp
Launcher/DX11Reflection/Shaders/: Basic.hlsli  Basic_2D_PS.cso  Basic_2D_VS.cso  Basic_3D_PS.cso  Basic_3D_VS.cso
Launcher/DX11Texture/: CMakeLists.txt  d3dApp.cpp  d3dApp.h  imgui.ini  main.cpp
Launcher/DX11Texture/Shaders/: Basic.hlsli  Basic_2D_PS.cso  Basic_2D_VS.cso  Basic_3D_PS.cso  Basic_3D_VS.cso  Basic_PS_2D.hlsl  Basic_PS_3D.hlsl  Basic_VS_3D.hlsl  Light_PS.cso
Launcher/DX12App/: CMakeLists.txt  D3DApp.cpp  D3DApp.h  d3dUtil.h  main.cpp
Launcher/DX12BoxApp/: CMakeLists.txt  main.cpp
Launcher/DX12ShapeApp/: CMakeLists.txt  D3DApp.cpp  D3DApp.h  color.hlsl  main.cpp
Launcher/DX12Wave/: CMakeLists.txt  FrameResource.cpp  FrameResource.h  main.cpp
Launcher/DX12WaveLighting/: CMakeLists.txt  FrameResource.cpp  FrameResource.h  main.cpp
Launcher/DXDemo/: CMakeLists.txt  D3DHeader.h  Triangle.hlsl  main.cpp
Launcher/Dx12Demo/: MatrixUtil.h  Triangle.hlsl  main.cpp
Launcher/Dx12DemoTemplate/: CMakeLists.txt  D3DHeader.h  main.cpp
Launcher/Example1/: CMakeLists.txt  main.cpp
Launcher/Example2/: CMakeLists.txt  main.cpp
Launcher/Example3/: CMakeLists.txt  main.cpp
Launcher/OpenGLDemo/: CMakeLists.txt  main.cpp
Resources/Shaders/: base.fs.glsl  base2.fs.glsl
cmake/: target_path.h.in
cmake/backends/: DX11Deps.cmake  DX12Deps.cmake  OpenGLDeps.cmake
